<resources>
    <string name="app_name">My docomo アプリ</string>
    <string name="tutorial_page_1_large_message_tab">料金・データ量・dポイントもサクッと確認！</string>
    <string name="tutorial_page_1_large_message">料金・データ量・dポイントも
\nサクッと確認！</string>
    <string name="tutorial_page_1_message">dアカウントを登録しておけば、いつでもサクッと確認していただけます
\n2台以上ご利用の方や、家族分もまとめて確認したい方にも大好評！</string>
    <string name="tutorial_skip">スキップ</string>
    <string name="tutorial_page_2_large_message_tab">あなたに合わせたおすすめ情報をお届け</string>
    <string name="tutorial_page_2_large_message">あなたに合わせた
\nおすすめ情報をお届け</string>
    <string name="tutorial_page_2_message">ご利用額の確定や、速度低下のお知らせはもちろん、キャンペーンなどのお得な情報を見逃さない！ドコモをより身近に感じていただくため、あなただけにお知らせします</string>
    <string name="tutorial_page_3_large_message_tab">困ったときも、My docomoアプリから</string>
    <string name="tutorial_page_3_large_message">困ったときも、
\nMy docomoアプリから</string>
    <string name="tutorial_page_3_message">故障や紛失、暗証番号やパスワードをお忘れの場合など、「もしも」や「困った」のときお悩みをサポートします</string>
    <string name="tutorial_start">はじめる</string>
    <string name="app_term_title">アプリ利用規約</string>
    <string name="app_term_consent_message">利用規約が改定されました。ご利用を続けられる場合は、以下の利用規約に同意をしてください</string>
    <string name="app_term_app_privacy_policy">アプリケーション・プライバシーポリシー</string>
    <string name="app_term_privacy_policy_detail">
お客様がこのアプリケーションを利用されるにあたり、携帯電話内の次の情報を外部送信します
\n\n■外部送信する情報
\n①　アカウント識別子（当社がサービス契約者及びサイトユーザーの契約回線又はdアカウントに対して付与する任意の識別番号です。
        なお、アカウント識別子自体にお客様のお名前、ご住所、電話番号、電子メールアドレスなどの個人情報は含まれません）、端末識別ID、ご利用端末情報
\n②　dアカウント情報
\n③　本アプリケーションの操作・設定状況
\n\n■利用目的
\n①　お知らせ機能の提供
\n②　My docomoサイトへの認証
\n③　サービス改善、不具合修正、データ分析
\n\n■第三者提供等の有無
\n上記の情報は第三者に送信・提供されることはありません
    </string>
    <string name="app_term_decide_detail"><u>詳細を確認する</u></string>
    <string name="app_term_read_contract">アプリケーション・プライバシーポリシーとご利用規約の全文を確認しました</string>
    <string name="app_term_read_contract_not_tab">アプリケーション・プライバシーポリシーと\nご利用規約の全文を確認しました</string>
    <string name="app_term_docomo_term_of_application_service">My docomoアプリご利用規約</string>
    <string name="app_term_agree">同意する</string>
    <string name="webview_menu_title">メニュー</string>
    <string name="webview_menu_title_next">→</string>
    <string name="webview_menu_title_update">更新</string>
    <string name="webview_menu_title_start_brouser">ブラウザで開く</string>
    <string name="webview_menu_title_copy_url">URLをコピー</string>
    <string name="webview_netowork_error">ネットワークに接続されていないため\nこの画面を表示することができません\n\nネットワークへの接続をご確認の上、再度お試しください</string>
    <string name="webview_other_error">この画面を表示することができません\n\nしばらく時間をおいて、再度お試しください</string>
    <string name="account_setting_top_title">dアカウントログイン</string>
    <string name="account_setting_d_account_id">dアカウントID</string>
    <string name="account_setting_d_password">パスワード</string>
    <string name="account_setting_d_account_menu">dアカウントメニュー</string>
    <string name="account_setting_what_is_d_account">dアカウントとは？</string>
    <string name="account_setting_notes">ご注意事項</string>
    <string name="account_setting_docomo_business_premium_club_member">ドコモビジネスプレミアクラブ会員の方</string>
    <string name="account_setting_not_available_your_account">ドコモビジネスプレミアクラブ会員（法人契約回線が紐付くdアカウント）ではご利用できません
\nMy docomoサイトをご利用ください
    </string>
    <string name="account_setting_notes_input_d_account">dアカウントのID／パスワード入力の際のご注意</string>
    <string name="account_setting_notes_input_d_account_detail">
・半角英数字および記号で入力してください
\n・大文字小文字の入力間違いにご注意ください
\n・ログインに連続で失敗した場合、ロックがかかり、ご利用になれなくなりますのでご注意ください
\n・本アプリでは、dアカウントのID／パスワードがアプリ内に保存される仕組みとなっております
    </string>
    <string name="account_setting_handling_of_d_account">dアカウントのID／パスワードのお取り扱いについて</string>
    <string name="account_setting_handling_of_d_account_detail_message">
・dアカウントのID／パスワードは、お客様のご利用料金明細やご契約内容を確認できる重要なものですので、以下の点にご注意ください
\n・第三者に知られることのないよう、お取り扱いには十分ご注意ください
\n・パスワードは安全のため第三者から推測されやすいものをお避けいただき、定期的に変更されることをお勧めいたします
\n・ＮＴＴドコモ以外の第三者が提供する、アプリやサイトにdアカウントのID／パスワードを保存する場合は、特にご注意ください
    </string>
    <string name="account_setting_access_to_my_docomo_site">アプリ内からのMy docomoサイトへのアクセス</string>
    <string name="account_setting_access_to_my_docomo_site_detail_message">・本アプリからMy docomoサイトへアクセスし、各種お手続きなどをする場合には、パスワードを保存する設定をされているお客様も含めて、dアカウントのID／パスワードの入力が必要となります。My docomoで推奨されていないブラウザをご利用の場合は、一部表示が崩れたり、正常に動作しない可能性があります。予めご了承ください</string>
    <string name="confirm_use_widget_message_content">プッシュ通知をONにすると\n便利なお知らせを受け取れます</string>
    <string name="confirm_use_widget_message_detail">プッシュ通知をONにするとデータ量や料金の\n便利な情報がすぐに受け取れます</string>
    <string name="confirm_use_widget_button">さあ、My docomoへ</string>
    <string name="confirm_use_widget_notice">ご注意事項</string>
    <string name="term">
株式会社ＮＴＴドコモ（以下「ドコモ」といいます）がお客様に提供するMy docomoアプリ（以下「本アプリ」といいます）は、このMy docomoアプリご利用規約（以下「本規約」といいます）ならびにその他の本アプリのご利用にあたり適用される契約約款、ｄアカウント規約、My docomoご利用規約、その他のご利用規約およびその他注意事項（以下、総称して「本規約等」といいます）に従って提供されます。お客様が本規約等に同意されない場合、本アプリをご利用いただくことはできません。なお、お客様が本アプリを起動し、画面上に表示される本規約に同意する旨のボタンを押したときに、本規約等に基づく本アプリの利用契約がドコモとお客様との間で成立し、その効力を発生するものとします。

\n\n1. 本アプリの概要
\n(1) 本アプリは、ドコモよりｄアカウント規約に基づき発行されるdアカウントのID およびパスワード（IDとパスワードとを併せて以下「ID/パスワード」といいます）を取得し、My docomoご利用規約に基づきMy docomoを利用しているお客様に対し、次の機能を提供するアプリです。

\n[1] My docomoサイトで掲載される情報のうち、ドコモが別に定める一部の情報（ご契約情報、料金関連情報、dポイントクラブ関連情報などを指し、以下総称して「各種情報」といいます）を、My docomoサイトから取得し、表示する機能
\n[2] 各種情報のうち、ドコモが別に定める情報をグラフで表示する機能
\n[3] 各種情報のうち、お客様が選択した情報をウィジェットで表示する機能
\n[4] My docomoサイトその他ドコモが別に定めるウェブサイトへアクセスする機能
\n[5] ドコモの商品・サービス・キャンペーン・イベント等のご案内を行う機能
\n[6] その他前各号に付帯関連する機能

\n(2) 本アプリのご利用にあたっては、dアカウントのIDが本アプリ内に保存されます。また、お客様が、パスワードを保存する設定（以下「パスワード保存設定」といいます）を選択された場合には、パスワードも本アプリ内に保存され、お客様の設定により、本アプリの起動時または設定した頻度において自動で前号[1]で定める各種情報の取得を行います。当該自動取得の設定は、本アプリインストール後の初期設定時に有効／無効を選択いただくことができ、初期設定後も本アプリ内の設定画面より変更いただくことができます。頻度の設定も本アプリ内の設定画面より設定いただくことができますが、初期値は24時間毎となっております。なお、本アプリをインストールした本アプリ対応端末（第2項第1号で定義）を海外でご利用される際にも、本アプリ対応端末において海外でのご利用ができない設定にしている場合を除き、自動で各種情報の取得を行い、通信料が発生しますので、ご注意ください。
\n(3) パスワード保存設定を選択している場合であっても、dアカウントのID／パスワードを変更された場合には、変更後のdアカウントのID／パスワードを本アプリに設定いただくまでは、自動での各種情報の取得等、一部の機能の利用ができなくなります。
\n(4) パスワード保存設定することにより、ドコモオンライン手続き等、ｄアカウントのID／パスワードの入力が省略することができる機能もありますが、パスワード保存設定を選択している場合であっても、ドコモが別に定める機能のご利用にあたっては、ご利用の際に別途dアカウントのID／パスワードのご入力が必要となる場合がございます。
\n(5) パスワード保存設定をしていないお客様は、本アプリ起動後、お客様自身でパスワードを入力し、手動により各種情報の取得を行う必要があります。なお、この場合、第1号[3]に定める機能（以下「ウィジェット表示機能」といいます）により表示される情報は、手動で取得された情報に限られます。
\n(6) ウィジェット表示機能をご利用の場合、パスワード保存設定の有無にかかわらず、お客様が本アプリ上にご登録いただいているいずれかのアカウントに係るdアカウントのID／パスワードを入力のうえ、ウィジェット表示機能のご利用設定を行い、表示情報を選択いただく必要があります。なお、ウィジェット表示機能のご利用設定後は、ウィジェット表示機能（表示情報の設定・変更を含みます）は、dアカウントのID／パスワードによる認証を行うことなくご利用いただけます。

\n\n2. ご利用条件
\n(1) 本アプリのご利用には、Android OSを搭載する端末のうち、ドコモが別に定める本アプリに対応する端末（以下「本アプリ対応端末」といいます）が必要です。なお、本アプリ対応端末によっては、第1項第1号[2]または[3]に定める機能の利用にあたって、各種情報が正常に表示されない場合等があります。
\n(2) 本アプリのご利用にあたっては、ドコモが別に定める手続きに従い、事前にdアカウントのID／パスワードの取得およびMy docomoの利用登録をしていただく必要があります。なお、ドコモビジネスプレミアクラブに加入されているお客様は、本アプリはご利用いただけません。また、法人のお客様でドコモビジネスプレミアクラブに加入していないお客様でも一部機能の利用ができない場合等がございます。
\n(3) My docomoサイト、お客様のご契約状況・ご利用状況、通信の状況如何によっては、本アプリにおいて各種情報を正常に取得できない、または正常に表示できない場合があります。
\n(4) 当社は、本アプリのバージョンアップを行う場合があります。この場合、お客様が本サービス対応端末上の本アプリのバージョンアップを行うまでの間、本アプリの全部または一部の機能が利用できない場合があります。

\n\n3. 料金について
\n(1) 本アプリご利用にあたっては、入会金および会費その他のご利用料金はかかりません。ただし、本アプリのご利用にかかる通信料は、お客様のご負担となります。また、本アプリのインストールまたはバージョンアップが行われた場合や本アプリにより自動的に通信が行われた場合にも、通信料がかかります。
\n(2) 本アプリを海外でご利用になるには、全ての通信に対し、契約約款に定める国際アウトローミング通信料がかかります。この場合、お客様がパケット定額サービスをご契約されていても、パケット定額サービスの適用対象外となります（海外パケ・ホーダイが適用となる場合を除きます）。なお、海外パケ・ホーダイが適用となる場合であっても、本サービスのご利用により短期間で上限額に到達する場合がありますので、ご注意ください。

\n\n4. 本アプリの運用
\n(1) ドコモは、本アプリの一時中断のお知らせ等、お客様へのお知らせを行う場合、ドコモのホームページへの掲載その他ドコモが適当と判断する方法により行なうものとします。
\n(2) 本規約は、ドコモの都合により変更されることがあります。この場合、ドコモは前号に従い1日以上の予告期間をおいてドコモのホームページにおいて変更後の本規約の内容を周知するものとし、予告期間経過後は、変更後の本規約が適用されるものとします。

\n\n5. パスワード等について
\n(1) ドコモは、本アプリに誤ったdアカウントのID／パスワードが一定回数以上入力された場合は、お客様によるMy docomoサイトの利用を一時停止する措置を講じる場合があります。この場合に、My docomoサイトのご利用の再開をご希望されるときは、ドコモが別途定める手続きに従い、一時停止の解除もしくはdアカウントのID／パスワードを再発行のうえご利用ください。
\n(2) 本アプリのご利用にあたっては、お客様以外の第三者による本アプリの不正利用・情報の閲覧等を防止するため、本アプリを起動させる際のアプリロックパスコードを設定することができます。アプリロックパスコードは、お客様自身で、任意の4桁の数字を設定してください。なお、アプリロックパスコードを設定されている場合についても、各種情報の自動取得やウィジェット表示機能（表示情報の設定・変更を除きます）は、アプリロックパスコードの入力なしで動作します。
\n(3) 誤ったアプリロックパスコードが一定回数以上入力された場合は、dアカウントのID／パスワードを入力し、アプリロックパスコードのリセットを行う必要があります。
\n(4) ドコモは、本アプリのご利用にあたり、dアカウントのID／パスワードまたはアプリロックパスコード（以下「パスワード等」といいます）が入力された場合（本アプリに保存されたdアカウントのIDまたはdアカウントのID／パスワードが本アプリにより通知された場合を含みます）は、お客様自身が入力されたものとみなし、パスワード等の不正使用によりお客様に損害が生じた場合であっても、一切責任を負いません。
\n(5) お客様は、パスワード等を第三者に知られないようにお客様の責任において十分注意して管理するものとします。また、お客様は、パスワード等について、生年月日、電話番号等第三者に推測されやすいものを避けて設定し、定期的に変更するものとします。

\n\n6. 利用中止等
\n(1) 本アプリのご利用の中止を希望される場合は、お客様自身で本アプリ対応端末から本アプリを削除する必要があります。
\n(2) 本アプリのご利用の中止を希望される場合は、本アプリ内に保存された各種情報を削除するため、必ず、本アプリを削除してください。本アプリを削除した場合、本アプリ内に保存されていた各種情報等は復元できません。
\n(3) お客様がdアカウント規約に基づき、dアカウントのID／パスワードのご利用を中止された場合、My docomoご利用規約に基づき、My docomoのご利用を解約された場合、電気通信サービスを解約された場合、名義変更・承継をすることにより電気通信サービスのご契約者が変更された場合、携帯電話番号を変更された場合等には、My docomoサイトから各種情報の取得ができなくなります。なお、本アプリ内に保存されている各種情報は自動的には削除されませんので、お客様自身で本アプリを削除または本アプリ内に登録されているdアカウントのID／パスワードの削除をしてください。
\n(4) ドコモは、お客様が次項に定める事項のいずれかに該当した場合は、お客様への本アプリの提供を停止し、または終了することができるものとします。

\n\n7. 禁止事項
\nお客様は、本アプリのご利用にあたり、以下に定める行為を行なわないものとします。

\n(1) ドコモもしくは第三者の著作権、特許権、商標権等の知的財産権、その他の権利を侵害する行為、または侵害するおそれのある行為。
\n(2) 第三者のプライバシーを侵害する行為、または侵害するおそれのある行為。
\n(3) ドコモの設備に無権限でアクセスし、もしくは過度な負担を与える行為、本アプリの提供を不能にする行為、その他本アプリの提供もしくはその運営に支障を与える行為、またはそのおそれのある行為。
\n(4) ドコモまたはその関係会社の営業活動を妨害する行為、または妨害するおそれのある行為。
\n(5) ドコモもしくは第三者に不利益もしくは損害を与える行為、またはそのおそれのある行為。
\n(6) 犯罪的行為もしくは犯罪的行為に結びつく行為、またはそのおそれのある行為。
\n(7) 本アプリを利用することによって得られる一切の情報を、業として利用する行為または方法のいかんを問わず第三者の利用に供する行為。
\n(8) 本アプリを本アプリ対応端末以外の端末（本アプリ対応端末を不正に改造した端末を含みます）で利用する行為。
\n(9) 本アプリの逆コンパイル、逆アセンブル等のリバースエンジニアリング行為。
\n(10) 本アプリを、他のアプリ、サービスと組み合わせて利用する行為。
\n(11) 本アプリに付されている著作権表示およびその他の権利表示を削除または改変する行為。
\n(12) 上記の他、法令、本規約等もしくは公序良俗に違反する行為、または違反するおそれのある行為。

\n\n8. お客様情報について
\n(1) 本アプリでは、お客様のご契約状態等の各種情報を本アプリ（ウィジェット表示機能を利用される場合は、ウィジェットを含みます）上で表示します。表示された各種情報および当該情報を複製または出力した媒体は、お客様の責任により管理してください。
\n(2) ドコモが本アプリに関して取得したお客様に関する情報の取扱いについては、ドコモが別途定める「お客様の個人情報に関するプライバシーポリシー」に従うものとします。

\n\n9. お客様の利用する通信機器
\n本アプリを利用するためにお客様が使用される通信機器、アプリケーションその他これらに付随して必要となるすべての機器（以下「通信機器等」といいます）は、お客様の費用と責任において準備するものとし、ドコモは、通信環境や通信機器等の不備等による利用障害については、一切のサポートを行いません。

\n\n10. 権利譲渡等の禁止
\nお客様は、ドコモの事前の書面による同意なしに、本アプリを利用する権利または本規約等に関するお客様の権利または義務を譲渡し、承継させ、貸与し、または担保に供することはできないものとします。

\n\n11. 本アプリの利用上の制限
\n(1) ドコモは、次の場合には、本アプリの機能の全部または一部の提供を中断することがあります。この場合、ドコモは、ドコモが適当と判断する方法で事前にお客様にその旨を通知し、またはドコモのホームページ上に掲示します。ただし、緊急またはやむをえない事情により通知できない場合は、この限りではありません。
\n[1] 本アプリまたはMy docomoサイトに係るシステムの保守・点検を行う場合
\n[2] 火災・停電等の事故、地震・洪水等の天災、戦争、暴動、労働争議等により、本アプリの機能を提供できない場合
\n[3] 本アプリまたはMy docomoサイトに係るシステムの障害等により、本アプリの機能の提供ができなくなった場合
\n[4] ドコモが、運用上または技術上やむを得ず本アプリの既往の一時中断が必要であると判断した場合
\n[5] その他本規約等に定める場合
\n(2) ドコモは、前号により、お客様または第三者に損害が生じたとしても、当該損害について、本規約等に別に定める場合を除き、一切の責任を負いません。

\n\n12. 本アプリの機能の変更、追加および廃止
\n(1) ドコモは、業務上の都合により、お客様に事前に通知または周知することなく、本アプリの機能の全部または一部を変更、追加または廃止することがあります。
\n(2) 本アプリの全部または一部の変更、追加または廃止がお客様に重大な影響を及ぼすとドコモが判断した場合は、ドコモはあらかじめその変更、追加または廃止の内容について第4項第1号に従い、お客様に周知するものとします。
\n(3) ドコモは、本項に基づく本アプリの機能の変更、追加または廃止によりお客様に損害が生じたとしても、ドコモの故意、重過失によるものを除き、当該損害について、一切の責任を負いません。

\n\n13. 著作権
\nドコモが本アプリにて提供する情報および本アプリ（関連するマニュアル等を含みます）の著作権は、ドコモまたは第三者に帰属します。お客様は、当該著作物を個人として本アプリを利用する目的に限り使用できるものとし、当該目的以外に使用してはならないものとします。また、お客様は、著作権者の許可なく当該著作物の全部または一部を複製・複写・転載・改変し、または販売、再頒布、送信可能化、公衆送信、貸与、譲渡、利用許諾等をすることはできません。

\n\n14. 本アプリに関する責任
\n(1) 本アプリ対応端末の種類、本アプリの仕様またはお客様による本アプリのバージョンアップの有無によって、お客様がご利用できる機能の内容が異なる場合があります。したがって、ドコモはお客様に対して本アプリの全ての機能を利用できることを保証するものではありません。
\n(2) ドコモは、本アプリにて提供する情報の完全性・有用性・正確性・即時性・安全性等を保証するものではなく、また、必ずしもお客様の特定の利用目的や要求に対する適合性を保証するものではありません。
\n(3) ドコモは、本アプリに関してお客様に損害が生じた場合でも、ドコモの故意、重過失によるものを除き、当該損害について一切の責任を負わないものとします。

\n\n15. 準拠法
\n本規約等の効力・履行および解釈に関しては、日本法が適用されるものとします。

\n\n16. 紛争の解決
\n本規約等または本アプリに関連して訴訟の必要が生じた場合は、東京地方裁判所を第一審の専属的合意管轄裁判所とします。

\n\n17.完全合意
\n本規約等は、利用契約成立時におけるドコモとお客様との間の最終的な合意の全てであり、利用契約成立前におけるドコモとお客様との間の明示または黙示の合意、協議、申入れ、各種資料等に優先するものとします。
    </string>
</resources>