<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <include layout="@layout/topbal">

        </include>


        <RelativeLayout
            android:layout_width="@dimen/button_small_width_240dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_vertical_72dp"

            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/icon_tutorial_push_device"
                android:id="@+id/phone"


                />
            <ImageView
                android:layout_width="70dp"
                android:layout_height="64dp"
                android:src="@drawable/icon_tutorial_push_dialog_tab"
                android:layout_centerInParent="true"
                android:id="@+id/iv03"
                />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/icon_tutorial_noti_data"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:id="@+id/iv01"
                />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/icon_tutorial_noti_wallet"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/iv02"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/margin_horizontal_32dp"
            android:layout_marginLeft="@dimen/margin_horizontal_32dp"
            android:layout_gravity="center"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_horizontal_32dp"
                android:text="@string/confirm_use_widget_message_content"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/confirm_use_widget_message_detail"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_horizontal_24dp"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="264dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_horizontal_32dp">

            <Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape1"
                android:gravity="center"
                android:text="@string/confirm_use_widget_button"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/margin_horizontal_32dp"
        android:layout_marginLeft="@dimen/margin_horizontal_32dp"
        android:layout_gravity="center"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_use_widget_notice"
            android:textSize="14sp"
            android:textColor="#0070C9"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_vertical_48dp"
            android:id="@+id/care"

            />

    </LinearLayout>


</RelativeLayout>